# Cab-Assignment-Simulator

./: AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
cab_allocator/: __init__.py
cab_allocator/allocation/: __init__.py  strategy.py
cab_allocator/api/: __init__.py  main.py
cab_allocator/geo/: __init__.py  distance.py
cab_allocator/infra/: __init__.py  settings.py
cab_allocator/models/: __init__.py  driver.py  enums.py  ride.py
cab_allocator/pricing/: __init__.py  fare.py  settings.py
docs/: HLD.md  LLD.md
tests/: test_allocation.py  test_e2e.py  test_geo.py  test_pricing.py
